Minor Alignment Issue

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,7 +22,7 @@ body {
     overflow-x: hidden;
     min-width: 100vw;
     min-height: 100vh;
-    margin-top: 4rem;
+    padding-top: 4rem;
 }
 
 .navbar {
